On Unix/Linux, use FireFox instead of Netscape by default.
git-svn-id: https://svn.code.sf.net/p/processdash/code/trunk@3446 560cad82-bde2-470f-af40-e4e1f8d6548a